feat: enhance web UX with comprehensive statistics and personal footer touch

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             </div>
         </section>
 
+        <section class="comprehensive-stats">
+            <h2>Data Statistics</h2>
+            <div id="comprehensive-stats">
+                <div class="loading">Loading comprehensive statistics...</div>
+            </div>
+        </section>
+
         <section class="data-browser">
             <h2>Browse Data</h2>
             <div class="browser-tabs">
@@ -76,7 +83,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 LMIA Data Explorer | Data source: <a href="https://open.canada.ca/" target="_blank">Open Canada</a></p>
+            <p>Data source: <a href="https://open.canada.ca/" target="_blank">Open Canada</a> | Made with ❤️ by klc</p>
+            <p class="license">This repository is open source under the <a href="LICENSE" target="_blank">MIT License</a></p>
         </div>
     </footer>
 
