feat: add comprehensive disclaimers clarifying personal initiative status and non-governmental affiliation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
         </div>
     </header>
 
+    <div class="disclaimer-banner">
+        <div class="container">
+            <div class="disclaimer-content">
+                <div class="disclaimer-icon">ℹ️</div>
+                <div class="disclaimer-text">
+                    <strong>Disclaimer:</strong> This is a <strong>personal, non-governmental initiative</strong> created by klc. 
+                    We process and present <strong>open data</strong> provided by the Government of Canada for 
+                    <strong>non-commercial, non-political purposes</strong>. This tool is not affiliated with, 
+                    endorsed by, or connected to any government entity.
+                </div>
+            </div>
+        </div>
+    </div>
+
     <main class="container">
         <section class="stats-overview">
             <h2>Data Overview</h2>
@@ -79,12 +93,38 @@
                 <p class="note">These endpoints are compatible with Grafana's Infinity plugin for data visualization.</p>
             </div>
         </section>
+
+        <section class="about-section">
+            <h2>About This Project</h2>
+            <div class="about-content">
+                <p>This is a <strong>personal open data initiative</strong> created by klc to make Government of Canada LMIA data more accessible and easier to analyze. The project processes publicly available open data and presents it in a user-friendly format.</p>
+                <div class="about-features">
+                    <div class="feature-item">
+                        <span class="feature-icon">📊</span>
+                        <span>Open source and transparent</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🔓</span>
+                        <span>Uses only publicly available data</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🎯</span>
+                        <span>Non-commercial, educational purpose</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">📈</span>
+                        <span>Automated data processing</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
         <div class="container">
             <p>Data source: <a href="https://open.canada.ca/" target="_blank">Open Canada</a> | Made with ❤️ by klc</p>
             <p class="license">This repository is open source under the <a href="LICENSE" target="_blank">MIT License</a></p>
+            <p class="disclaimer-footer">This tool processes open data from the Government of Canada but is not affiliated with any government entity.</p>
         </div>
     </footer>
 
