--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@
             <h2>Browse Data</h2>
             <div class="browser-tabs">
                 <button class="tab-btn" data-tab="employer">Employer Format</button>
-                <button class="tab-btn active" data-tab="quarterly">
-                    Quarterly Format
-                    <span class="recommended-badge">Recommended</span>
-                </button>
+                <button class="tab-btn active" data-tab="quarterly">Quarterly Format</button>
             </div>
             
             <div class="tab-content" id="employer-content">
