--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Explore Labour Market Impact Assessment data from the Government of Canada</p>
             <div class="status-badges">
                 <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/process_lmia.yml" target="_blank" class="gh-action-badge">
-                    <img src="https://github.com/relishcolouredhat/lmia-collector/workflows/Process%20LMIA%20Data/badge.svg" alt="GitHub Actions Status">
+                    <img src="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/process_lmia.yml/badge.svg" alt="GitHub Actions Status">
                 </a>
             </div>
         </div>
