feat: optimize header layout - flag and title on same line
- Place Canadian flag and title on same horizontal line
- Reduce overall header height and improve space efficiency
- Add title-section CSS for proper flexbox layout
- Remove unnecessary margin from flag container
- Maintain visual hierarchy and readability

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
     <header>
         <div class="container">
-            <div class="flag-container">
-                <img src="docs_src/canada_flag.svg" alt="Flag of Canada" class="flag">
+            <div class="title-section">
+                <div class="flag-container">
+                    <img src="docs_src/canada_flag.svg" alt="Flag of Canada" class="flag">
+                </div>
+                <h1>LMIA Data Explorer</h1>
             </div>
-            <h1>LMIA Data Explorer</h1>
             <p>Explore Labour Market Impact Assessment data from the Government of Canada</p>
             <div class="status-badges">
                 <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/process_lmia.yml" target="_blank" class="gh-action-badge">
