refactor: consolidate footer sections for better conciseness
- Combine all attributions into single footer-attributions section
- Reduce footer from 5+ lines to 3 concise lines
- Merge data source, license, disclaimer, and geocoding info
- Remove unused CSS classes and clean up styling
- Maintain all important information while improving readability

--- a/index.html
+++ b/index.html
@@ -151,12 +151,9 @@
             <div class="update-info">
                 <p>🔄 <strong>Last Updated:</strong> <span id="last-update-time">Loading...</span> | <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/process_lmia.yml" target="_blank" id="gh-action-link">View Latest Run</a></p>
             </div>
-            <p>Data source: <a href="https://open.canada.ca/" target="_blank">Open Canada</a> | Made with ❤️ by klc</p>
-            <p class="license">This repository is open source under the <a href="LICENSE" target="_blank">MIT License</a></p>
-            <p class="disclaimer-footer">This tool processes open data from the Government of Canada but is not affiliated with any government entity.</p>
-            <div class="geocoding-attribution">
-                <p>🌍 Geographic coordinates provided by <a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> via <a href="https://nominatim.org/" target="_blank">Nominatim</a> geocoding service</p>
-                <p class="attribution-note">Thank you to the OpenStreetMap community for enabling geographic analysis of our data</p>
+            <div class="footer-attributions">
+                <p>Data source: <a href="https://open.canada.ca/" target="_blank">Open Canada</a> | Made with ❤️ by klc | <a href="LICENSE" target="_blank">MIT License</a></p>
+                <p>🌍 Geographic coordinates: <a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> via <a href="https://nominatim.org/" target="_blank">Nominatim</a> | Not affiliated with any government entity</p>
             </div>
         </div>
     </footer>
