feat: add address cache statistics to web UX
Cache Statistics Dashboard:
- New 'Address Cache' card showing unique postal codes count
- Dedicated cache statistics section with detailed metrics
- Real-time statistics from cache_statistics.json endpoint

Statistics Generated:
- 12 unique postal codes tracked
- 12 unique employers in cache
- 12 unique addresses geocoded
- Cache file size and last updated timestamp
- Automatic generation after cache updates

Backend Integration:
- scripts/generate_cache_stats.sh generates JSON statistics
- Integrated into update_cache.sh workflow
- GitHub Actions workflows updated to commit statistics

Web Interface Enhancements:
- New cache stats card with green styling
- Comprehensive cache metrics display
- Error handling for missing cache data
- Responsive design for all screen sizes

User Experience:
- Provides visibility into geocoding progress
- Shows cache effectiveness and coverage
- Helps users understand data processing status
- Clear indication when cache is empty/updating

Benefits:
- Transparency into data processing pipeline
- User confidence in cache system effectiveness
- Easy monitoring of geocoding progress
- Professional dashboard appearance

The web UX now shows '12 unique postal codes' and detailed cache metrics!

[cache-stats-ux]

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                     <div class="stat-number" id="latest-update">-</div>
                     <p>Most recent data</p>
                 </div>
+                <div class="stat-card cache-stats">
+                    <h3>Address Cache</h3>
+                    <div class="stat-number" id="cache-postal-codes">-</div>
+                    <p>Unique postal codes</p>
+                </div>
             </div>
         </section>
 
@@ -65,6 +70,13 @@
             <h2>Data Statistics</h2>
             <div id="comprehensive-stats">
                 <div class="loading">Loading comprehensive statistics...</div>
+            </div>
+        </section>
+
+        <section class="cache-statistics">
+            <h2>Address Cache Statistics</h2>
+            <div id="cache-stats">
+                <div class="loading">Loading cache statistics...</div>
             </div>
         </section>
 
