feat: separate data collection and post-processing into modular workflows
BREAKING CHANGE: Complete workflow architecture redesign

🔄 Modular Pipeline Architecture:
- collect-data.yml: Raw data collection only (fast, reliable)
- postprocess-data.yml: Geocoding and postal code processing
- update-cache.yml: Smart cache updates (conditional triggers)
- daily-pipeline.yml: Master orchestrator (chains all workflows)

🎯 Smart Conditional Logic:
- Cache updates ONLY trigger when postal codes are missing
- Post-processing runs independently of collection
- Each workflow can be manually triggered with parameters
- Automatic daily pipeline at 05:00 UTC

📊 Enhanced Workflow Features:
- Configurable sleep timers for API rate limiting
- Debug mode for all workflows
- Force options to override conditional logic
- Language selection (en/fr) with proper filtering
- Comprehensive error handling and status reporting

🛠️ New Processing Scripts:
- scripts/add_postal_codes_employer.sh
- scripts/add_postal_codes_quarterly.sh
- Enhanced cache integration with automatic statistics

🌐 Updated Web Interface:
- 4 GitHub Actions status badges in header
- Real-time status for each pipeline component
- Professional badge layout for transparency

📚 Updated Documentation:
- 5 workflow status badges in README
- Detailed pipeline architecture explanation
- Manual control documentation
- Clear separation of concerns

⚡ Performance Benefits:
- Faster collection (no geocoding blocking)
- Efficient cache usage (only update when needed)
- Parallel workflow execution
- Reduced API rate limit pressure
- Better error isolation between stages

🔧 Workflow Outputs:
- Collection: new_files_found, files_processed
- Post-processing: cache_updated, files_processed
- Cache: update status and statistics
- Pipeline: comprehensive run summary

The system now provides complete workflow transparency and modular control!

[modular-workflows]

--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
             </div>
             <p>Explore Labour Market Impact Assessment data from the Government of Canada</p>
             <div class="status-badges">
-                <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/process_lmia.yml" target="_blank" class="gh-action-badge">
-                    <img src="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/process_lmia.yml/badge.svg" alt="GitHub Actions Status">
+                <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/daily-pipeline.yml" target="_blank" class="gh-action-badge">
+                    <img src="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/daily-pipeline.yml/badge.svg" alt="Daily Pipeline Status">
+                </a>
+                <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/collect-data.yml" target="_blank" class="gh-action-badge">
+                    <img src="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/collect-data.yml/badge.svg" alt="Data Collection Status">
+                </a>
+                <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/postprocess-data.yml" target="_blank" class="gh-action-badge">
+                    <img src="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/postprocess-data.yml/badge.svg" alt="Post-Processing Status">
+                </a>
+                <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/update-cache.yml" target="_blank" class="gh-action-badge">
+                    <img src="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/update-cache.yml/badge.svg" alt="Cache Update Status">
                 </a>
             </div>
         </div>
