feat: add Cloudflare Web Analytics tracking to website
ANALYTICS INTEGRATION: Added Cloudflare Web Analytics to main website
✅ Cloudflare Web Analytics script added to index.html
✅ Tracking token: 6cb48be0e5ae47dcbd13e2573a633529
✅ Script placed before closing </body> tag for optimal loading
✅ Uses defer attribute for non-blocking page load performance

TECHNICAL DETAILS:
- Script URL: https://static.cloudflareinsights.com/beacon.min.js
- Placement: Right before </body> tag (best practice)
- Loading: Deferred to avoid blocking page rendering
- Comments: Clear start/end markers for easy identification

COVERAGE: Single HTML file (index.html) - all web pages now have analytics

This enables tracking of:
- Page views and visitor analytics
- Geographic distribution of users
- Referral sources and user behavior
- Performance metrics and insights

[cloudflare-analytics]

--- a/index.html
+++ b/index.html
@@ -180,5 +180,7 @@
     </footer>
 
     <script src="docs_src/app.js"></script>
+    
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "6cb48be0e5ae47dcbd13e2573a633529"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
