fix: update GitHub Actions badges in web UI
- Replace deprecated process_lmia.yml link with daily-pipeline.yml in footer
- Add missing deploy-pages.yml badge for complete workflow coverage
- All badge URLs tested and returning 200 OK
- Badges will show status once workflows complete their first runs

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/update-cache.yml" target="_blank" class="gh-action-badge">
                     <img src="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/update-cache.yml/badge.svg" alt="Cache Update Status">
                 </a>
+                <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/deploy-pages.yml" target="_blank" class="gh-action-badge">
+                    <img src="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/deploy-pages.yml/badge.svg" alt="Deploy Pages Status">
+                </a>
             </div>
         </div>
     </header>
@@ -170,7 +173,7 @@
     <footer>
         <div class="container">
             <div class="update-info">
-                <p>🔄 <strong>Last Updated:</strong> <span id="last-update-time">Loading...</span> | <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/process_lmia.yml" target="_blank" id="gh-action-link">View Latest Run</a></p>
+                <p>🔄 <strong>Last Updated:</strong> <span id="last-update-time">Loading...</span> | <a href="https://github.com/relishcolouredhat/lmia-collector/actions/workflows/daily-pipeline.yml" target="_blank" id="gh-action-link">View Latest Run</a></p>
             </div>
             <div class="footer-attributions">
                 <p>Data source: <a href="https://open.canada.ca/" target="_blank">Open Canada</a> | Made with ❤️ by klc | <a href="LICENSE" target="_blank">MIT License</a></p>
